src/styles/components/Header/header.module.css
.headerContainer {
  width: 90vw;
  height: 5vh;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  align-items: center;
  overflow-x: hidden;
  padding: 0;
  margin: 0;
  margin-left: 5vw;
  margin-right: 5vw;
  border-bottom: 1px solid  #DCDCDC;
  overflow-y: hidden;
}

.logoIcon {
  width: auto;
  height: 5vh;
  border-radius: 50%;
}

.welcomeNavBar, .appNavBar {
  display: flex;
  flex-flow: row nowrap;
}

.welcomeNavBar > ul, .appNavBar > ul {
  list-style-type: none;
}

.welcomeNavBar {
  width: auto;
}

.navBarList {
  display: flex;
  flex-flow: row nowrap;
  gap: 2vw;
}

.navBarListItem {
  font-size: 0.9em;
  border: 1px solid black;
  padding: 0.5vh;
  text-decoration: none;
  border-radius: 15px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.navBarListItem:hover {
  border: 1px solid #68a1d4;
}

.navBarLink {
  text-decoration: none;
  color: black;
}

.navBarLink:hover {
  color: #68a1d4;
}

/* AppNavBar styling */

.menuSvg, .menuSvgToggled {
  width: auto;
  height: 5vh;
  margin: 0;
  filter: invert(53%) sepia(12%) saturate(0%) hue-rotate(160deg) brightness(93%) contrast(90%);
}

.menuSvg:hover, .menuSvgToggled:hover {
  cursor: pointer;
  transform: scale(0.95);
}

.menuSvgToggled {
  transform: scale(0.9);
}

.appBarList {
  position: absolute;
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
  height: auto;
  gap: 2vw;
  border-radius: 10px;
  padding: 2vh;
  right: 0;
  top: 3.5vh;
  z-index: 1;
  background-color: #f8f8f8;
}

.appBarListItem {
  background-color: #f8f8f8;
}

.appBarListItem, .appBarSignOutListItem {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 5vh;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
  transition: box-shadow 0.3s ease-in-out;
}

.appBarListItem:hover, .appBarSignOutListItem:hover {
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  background-color: #e0e0e0;
  cursor: pointer;
}

.appBarLink {
  text-decoration: none;
  color: #001f3f;
}

.appBarSignOutListItem {
  background-color: red;
}

@media (max-width: 600px) {
  .appBarList {
    width: 40vw;
  }

  .appBarLink {
    font-size: 1em;
  }
}

@media (min-width: 601px) {
  .appBarList {
    width: 20vw;
  }

  .appBarLink {
    font-size: 1.5em;
  }
}

